--- a/src/App.css
+++ b/src/App.css
@@ -13,11 +13,12 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   padding: 10px;
 }
 
 .signin-card {
+  margin-top: 35vh;
   height: 220px;
   padding: 35px;
   border-radius: 20px;
