--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
 * {
   margin: 0;
   padding: 0;
-}
-
-.app {
-  text-align: center;
+  font-family: Avenir, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji,
+    Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
 }
 
 .signin-bg {
@@ -24,8 +23,39 @@
   border-radius: 20px;
   background-color: white;
   border: solid 1px lightgray;
+  text-align: center;
 }
 
 .signin-btn {
   margin-top: 15px;
+  font-weight: 500;
+}
+
+.navbar {
+  width: 100%;
+  height: 66px;
+  background-color: #002766;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 50px 0 50px;
+}
+
+.navbar h2 {
+  color: white;
+  margin-top: 7px;
+}
+
+.navbar span {
+  color: white;
+  cursor: pointer;
+}
+
+.chats-page {
+  height: 100vh;
+}
+
+::-webkit-scrollbar {
+  width: 0; /* Remove scrollbar space */
+  background: transparent; /* Optional: just make scrollbar invisible */
 }
